--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,14 @@
-html, body {
-    margin: 0;
-    padding: 0
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
 .rdos-wrapper {
     border: 1px solid pink;
+}
+
+.rdos-datepicker-wrapper {
+    border: 1px solid black;
+    width: 200px;
+    height: 200px;
+    background-color: #ccc;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
